@startuml Row detail tabs relation ships

' Common API Request and Response Structures for Table Components

package "RelatedTablesFactory keeps dependency relationships" {
    class Event {}
    class Region {}
    class Province {}
    class Participant {}
    class Reward {}
    class SpinHistory {}
    class AuditLog {}

    class User {}
    class Role {}
    class Permission {}



    AuditLog - Event
    AuditLog - Region
    AuditLog - Province
    AuditLog - Participant
    AuditLog - Reward
    AuditLog - User
    AuditLog - Role
    AuditLog - Permission


    Event <--> Region
    Event <--> Participant
    Event <--> Reward
    Event <--> SpinHistory
    Event <--> Province

    Province <--> Region
    Province <--> Participant
    Province <--> SpinHistory

    Region <-> Participant
    Region <-> Reward
    Region <-> SpinHistory

    Reward <-> SpinHistory
    Reward <-> Participant
    Reward <-> Province
}
@enduml
